src/objects/SF_Major_Release__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Available_Date__c</fullName>
        <description>The date that the release certification test is available.</description>
        <inlineHelpText>The date that the release certification test is available.</inlineHelpText>
        <label>Certification Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Deadline_Date__c</fullName>
        <description>The date that the release certification test must be completed by.</description>
        <inlineHelpText>The date that the release certification test must be completed by.</inlineHelpText>
        <label>Certification Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Training__c</fullName>
        <description>The certification training link for the specific Salesforce release.</description>
        <inlineHelpText>The certification training link for the specific Salesforce release.</inlineHelpText>
        <label>Certification Training</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <description>Location of the release notes for the specific Salesforce release.</description>
        <inlineHelpText>Location of the release notes for the specific Salesforce release.</inlineHelpText>
        <label>Release Notes</label>
        <type>Url</type>
    </fields>
</CustomObject>